--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src/**/*.tsx"
+    "lint": "eslint src/**/*.tsx",
+    "prettier": "prettier --write ./src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -25,6 +26,8 @@
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.7",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
