--- a/FE/S08P31D201/package.json
+++ b/FE/S08P31D201/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.12.0",
     "@mui/x-date-pickers": "^6.1.0",
     "axios": "^1.3.5",
+    "d3": "^7.8.4",
+    "d3-cloud": "^1.2.5",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +26,8 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
+    "@types/d3-cloud": "^1.2.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
