--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -16,6 +16,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
+
+	// MYSQL
+	implementation 'mysql:mysql-connector-java:8.0.27'
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// Test
 	implementation 'com.google.code.gson:gson:2.8.9'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
