--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# TEST
+server.port=7000
+
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/detecto
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
