--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 
 # JPA
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
