--- a/FE/S08P31D201/package.json
+++ b/FE/S08P31D201/package.json
@@ -16,10 +16,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@mui/x-date-pickers": "^6.1.0",
+    "@types/lodash": "^4.14.194",
     "axios": "^1.3.5",
     "d3": "^7.8.4",
     "d3-cloud": "^1.2.5",
     "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
