--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 # TEST
 server.port=7000
 
+# Session timeout
+server.servlet.session.timeout=60m
+
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/detecto
+spring.datasource.url=jdbc:mysql://k8d201.p.ssafy.io:3306/detecto
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=wogus
+spring.datasource.password=wogus
 
 # JPA
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Kafka
 spring.kafka.bootstrap-servers=k8d201.p.ssafy.io:9092
