🌚[be:fix] build name fix

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -73,5 +73,7 @@ clean {
 
 bootJar {
 	archiveBaseName = 'detecto'
-	archiveVersion = ''
+	archiveVersion = null
+	archiveClassifier = ''
+	archiveExtension = 'jar'
 }
