--- a/ROS/app/build.gradle
+++ b/ROS/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
-
 android {
     namespace 'com.detecto.ros'
     compileSdk 33
@@ -44,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.rabbitmq:amqp-client:5.13.0'
+    implementation 'com.github.felHR85:usbserial:6.1.0'
 }
