🌚[be:fix] login fix 1

--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.rabbitmq.host=k8d201.p.ssafy.io
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#FCM
+fcm.certification=detecto-92de8-650f23956b12.json
