--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	// WebSocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	//firebase fcm
+	implementation 'com.google.firebase:firebase-admin:6.8.1'
 	// queryDSL 설정
 	// Querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
