--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -47,6 +47,11 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	// webflux WebClient
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	//AWS
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.90'
+
+
 }
 
 tasks.named('test') {
