--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 	//AWS
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.90'
 
+	//Validation
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.0.0'
+
 
 }
 
