🌚[be:fix] code Refactoring 35

--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 	//Validation
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.0.0'
 
+	//Web-Push
+	implementation 'nl.martijndwars:web-push:5.1.1'
+	implementation 'org.bouncycastle:bcprov-jdk15on:1.68'
+	implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
 
 }
 
